<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg0"
    android:padding="16dp"
    android:id="@+id/main">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="404dp"
        android:text="@string/onboarding3_title"
        android:textColor="@color/text_primary"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="254dp"
        android:layout_height="82dp"
        android:text="@string/onboarding3_description"
        android:textColor="@color/text_secondary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="474dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_create_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:backgroundTint="#894F4A"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp" />

    <TextView
        android:id="@+id/tv_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:text="@string/already_have_account"
        android:textColor="@color/accent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_create_account" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="236dp"
        android:layout_height="236dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/care2"
        tools:layout_editor_absoluteY="127dp"
        tools:ignore="ContentDescription,MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>